--- a/.github/workflows/gke-deploy.yaml
+++ b/.github/workflows/gke-deploy.yaml
@@ -16,25 +16,33 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GKE_SA_KEY }}
+    
     - name: Configure Docker
       run: gcloud auth configure-docker --quiet
-      
-    - name: Build Docker image
-      run: docker build -t gcr.io/$PROJECT_ID/flask-app:$GITHUB_SHA .
-      
-    - name: Push to GCR
-      run: |
-        echo ${{ secrets.GKE_SA_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
-        docker push gcr.io/$PROJECT_ID/flask-app:$GITHUB_SHA
-        
+    
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: |
+          gcr.io/${{ env.PROJECT_ID }}/flask-app:${{ github.sha }}
+          gcr.io/${{ env.PROJECT_ID }}/flask-app:latest
+    
     - name: Configure kubectl
       uses: google-github-actions/get-gke-credentials@v1
       with:
-        cluster_name: $GKE_CLUSTER
-        location: $GKE_ZONE
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
         credentials: ${{ secrets.GKE_SA_KEY }}
-        
-    - name: Deploy
+    
+    - name: Deploy to GKE
       run: |
-        kubectl set image deployment/$DEPLOYMENT_NAME flask=gcr.io/$PROJECT_ID/flask-app:$GITHUB_SHA
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl set image deployment/${{ env.DEPLOYMENT_NAME }} flask=gcr.io/${{ env.PROJECT_ID }}/flask-app:${{ github.sha }}
+        kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }}
